# ARIA-v2

./: Cargo.toml  README.md  aria_crypto_phase2.patch  aria_task_chain.patch
skills/: MANIFEST_CONVENTIONS.md
skills/fs/find.fs/: Cargo.toml  manifest.toml
skills/fs/find.fs/src/: lib.rs
skills/fs/list.fs/: Cargo.toml  manifest.toml
skills/fs/read.fs/: Cargo.toml  manifest.toml
skills/fs/write.fs/: Cargo.toml  manifest.toml
skills/web/scrape.web/: Cargo.toml  manifest.toml
skills/web/scrape.web/src/: lib.rs
skills/web/search.web/: Cargo.toml  manifest.toml
skills/web/search.web/src/: lib.rs
src/: config.rs  crypto.rs  db.rs  lib.rs  main.rs  repl.rs  skills.rs
src/agent/: mod.rs  prompt.rs  react_loop.rs
src/identity/: file.rs  mod.rs
src/skills/: fs_sandbox.rs  manifest.rs  mod.rs  paths.rs  wasm_runtime.rs
