[workspace]
members = [
    ".",
    "skills/web/search.web",
    "skills/web/scrape.web",

]

[package]
name = "aria-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aria"
path = "src/main.rs"

[dependencies]
futures-util = { version = "0.3", features = ["io"] }
# Async runtime
tokio = { version = "1", features = ["full"] }

# WASM sandbox
wasmtime-wasi = { version = "45.0.1" }
wasmtime = { version = "45.0.1", features = ["async"] }


# SQLite
sqlite = "0.37"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config (manifest.toml parsing)
toml = "0.8"

# Cross-platform paths (~/.aria/ on all OS)
dirs = "5"

# Cross-platform file watching (inotify on Linux, ReadDirectoryChangesW on Windows)
notify = "6"

# HTTP client (for LLM API calls from host functions)
reqwest = { version = "0.x", features = ["json", "stream"] }

# Cron scheduler
tokio-cron-scheduler = "0.10"

# Hashing (sha256 for WASM verification)
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PDF extraction (for read_pdf host function)
pdf-extract = "0.7"

[dev-dependencies]
tokio-test = "0.4"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
